assets/src/scss/pages/search/_search-results.scss
.search-result-list {
  height: 150px;

  @include small-and-up {
    height: 120px;
  }

  @include large-and-up {
    height: 235px;
  }

  @include x-large-and-up {
    height: 208px;
  }
}

.multiple-search-result {
  height: 100%;
  padding-top: 100px;

  @include small-and-up {
    padding-top: 32px;
  }

  ul {
    border-top: 1px solid $grey-20;

    @include small-and-up {
      border-top: 0;
    }

    li {
      padding: 15px 0;
      margin: 0 $n15;
      border-bottom: 1px solid $grey-20;
      position: relative;

      @include small-and-up {
        margin: 0 auto 32px;
        padding-bottom: 32px;
      }

      @include mobile-only {
        margin: 0;
      }

      .search-hover {
        text-decoration: underline;
      }

      .search-result-item-image,
      .blank-block {
        width: 0;
        margin-right: 0;
        visibility: hidden;

        @include small-and-up {
          width: 25%;
          margin-right: 30px;
          visibility: visible;

          html[dir="rtl"] & {
            margin-right: 0;
            margin-left: 30px;
          }
        }

        &:hover {
          cursor: pointer;
        }
      }

      &.search-result-list-item-bg {
        @include background("/images/search-list.jpg");
        padding: 24px 15px $n30;
        margin: $n15;
        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
        border-bottom: 0;

        @include small-and-up {
          padding-top: 32px;
          padding-bottom: 32px;
          margin: $n15 0;
        }

        .search-result-item-headline {
          font-size: 1.5rem;
          margin-bottom: 40px;

          @include small-and-up {
            margin-bottom: 24px;
          }

          &:hover {
            cursor: pointer;
            text-decoration: underline;
          }
        }

        .search-result-item-content {
          display: block;
        }

        .btn {
          width: auto;
          margin-top: 32px;
          cursor: pointer;
          font-size: 0.85rem;
          height: 40px;
          padding: 0 20px;
          overflow: hidden;

          @include small-and-up {
            width: max-content;
          }
        }
      }
    }
  }

  .more-btn {
    margin-top: 25px;

    @include large-and-up {
      margin-top: 35px;
    }
  }
}

.search-result-item-body {
  .search-result-item-flex-title {
    @include medium-and-up {
      display: flex;
    }
    width: 100%;

    > div:first-child {
      width: 100%;
    }
  }

  .btn-secondary {
    width: 100%;

    @include medium-and-up {
      width: auto;
      position: relative;
      top: 5px;
      padding: 0 15px;
      margin-left: 12px;
    }

    i {
      font-size: $font-size-sm;
      font-weight: bold;
      margin-right: 10px;
      float: left;
      line-height: 2.2rem;
    }
  }

  .search-results-alternative-label {
    display: none;
    width: auto;
    height: 40px;
    line-height: 40px;
    padding: 0 $space-md;
    font-size: $font-size-sm;
    font-weight: bold;
    text-align: center;
    background: #97ed90;
    border-radius: 8px;
    color: #1a1a1a;

    &.search-results-alternative-label-mobile {
      display: inline-block;
      height: $space-lg;
      line-height: $space-lg;
      margin-bottom: 10px;

      @include medium-and-up {
        display: none;
      }
    }

    @include medium-and-up {
      padding: 0 $space-lg;
      display: block;
      width: auto;
      position: relative;
      top: 5px;
      margin-left: 12px;
    }

    i {
      font-size: $font-size-sm;
      font-weight: bold;
      margin-right: 10px;
      float: left;
      line-height: 2.2rem;
    }
  }
}

.search-result-item-actionbox {
  position: relative;
  display: block;
  width: 100%;
  float: left;

  @include small-and-up {
    position: absolute;
    right: 0;
    top: 0;
  }
}

.search-result-item-headline {
  font-size: 1.125rem;
  color: $grey-80;
  text-decoration: none;
  font-weight: 500;
  display: block;
  line-height: normal;
  margin-bottom: 10px;

  @include small-and-up {
    font-size: $font-size-lg;
  }

  @include large-and-up {
    font-size: 1.625rem;
  }
}

.search-result-item-info {
  font-style: italic;
  color: $grey-60;
  line-height: normal;
  margin-bottom: 10px;
  font-size: $font-size-xxs;

  @include large-and-up {
    font-size: $font-size-xs;
  }
}

.search-result-item-content {
  color: $dark-shade-black;
  font-size: $font-size-sm;
  font-family: $lora;
  line-height: 1.6;
  margin: $n10 0 0;
  width: 80%;

  @include large-and-up {
    font-size: 1.125rem;
  }
}

.search-result-item-author {
  &:after {
    content: "\2022";
    display: inline-block;
    padding-left: 5px;
    padding-right: 5px;
  }

  a {
    color: $grey-60;
  }
}

.search-result-tags {
  .search-result-item-title {
    background: $grey-20;
    color: $white;
    font-weight: bold;
    padding: 2px $n10;
    text-decoration: none;
    margin-right: 10px;
    display: inline-block;
  }

  .tags {
    @include mobile-only {
      margin-top: 5px;
    }
  }

  .search-result-item-tag {
    &:before {
      top: -2px;
    }
  }
}

